MOBILE-3320 format-text: Fix bullets and numbers cutoff in lists

--- a/src/theme/components/format-text.scss
+++ b/src/theme/components/format-text.scss
@@ -209,9 +209,7 @@ core-format-text {
 core-format-text {
     ul {
         padding-left: 1rem;
-    }
-    ul, ol {
-        -webkit-padding-start: 15px;
+        -webkit-margin-start: .2rem;
     }
 
     .atto_image_button_text-top,
